# opencl_tag

./: .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  opencl_profile.py  opencl_tag.cpp  requirements.txt  setup.py  test.cpp
cl_tag/: __init__.py
opencl_tag/: __init__.py
src/: opencl_tag.cpp  opencl_tag.hpp
test/: test.cpp  test.py
